--- a/web2/WebContent/jq8.html
+++ b/web2/WebContent/jq8.html
@@ -17,10 +17,10 @@ ID 입력 : <input type="text" name = "userid" id = "userid" value = "">
 <span class = "msg" id = "age_error1">나이를 입력하세요</span>
 <span class = "msg" id = "age_error2">나이는 숫자만 입력 가능합니다</span>
 <br/>
-비번 입력 : <input type="text" name = "pwd1" id = "pwd1" value = "">
+비번 입력 : <input type="text" id = "pwd1" value = "">
 <span class = "msg" id = "p_error1">비밀번호를 입력하세요</span>
 <br/>
-비번 재입력 : <input type="text" name = "pwd2" id = "pwd2" value = "">
+비번 재입력 : <input type="text" id = "pwd2" value = "">
 <span class = "msg" id = "p_error2">비밀번호 불일치</span>
 <br/><br/>
 
