--- a/web2/WebContent/jq12ajax.html
+++ b/web2/WebContent/jq12ajax.html
@@ -5,8 +5,7 @@
 <title>Insert title here</title>
 <style type="text/css">
 </style>
-<script type="text/javascript"
-	src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	//txt문서
